# pdfreader

./: .gitignore  LICENSE  README.md  pyproject.toml
apps-root/: index.html
src/: run_pdfreader.py
src/pdfreader/: __init__.py  __main__.py  app.py  browser.py  document.py  fonts.py  help.py  recent.py  state.py  toc.py  viewer.py
tests/: test_document.py
web/: README.md  app.js  bootstrap-aws.sh  deploy.sh  index.html  manifest.webmanifest  pdf.js  shortcuts.js  state.js  styles.css  sw.js
