[project]
name = "pdfreader"
version = "0.5.1"
description = "A fast, minimal, keyboard-driven standalone PDF reader"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "pypdfium2>=4.30",
    "pillow>=10.0",
]

[project.scripts]
pdfreader = "pdfreader.app:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.11",
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfreader"]
